--- a/app/src/main/res/layout/activity_ichoice.xml
+++ b/app/src/main/res/layout/activity_ichoice.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/MainBackground"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:weightSum="1"
-    android:background="@color/MainBackground"
     tools:context="my.com.taruc.fitnesscompanion.UI.IChoiceActivity">
 
     <TextView
@@ -23,14 +23,14 @@
         android:id="@+id/buttonLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/txt_data"
         android:layout_marginTop="30dp"
         android:gravity="center_horizontal"
-        android:orientation="horizontal"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btn_find"
@@ -59,17 +59,17 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/buttonLayout"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="33dp" />
+        android:layout_marginTop="33dp"
+        android:paddingLeft="@dimen/activity_horizontal_margin" />
 
     <LinearLayout
         android:id="@+id/layout_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/sp_choose"
+        android:orientation="horizontal"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:orientation="horizontal">
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/tv_device"
@@ -97,9 +97,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout_version"
         android:layout_marginTop="20dp"
+        android:orientation="horizontal"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:orientation="horizontal">
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/tv_battterytitle"
@@ -109,8 +109,8 @@
             android:layout_toLeftOf="@+id/txt_data"
             android:layout_toStartOf="@+id/txt_data"
             android:gravity="center"
-            android:textColor="@color/white"
             android:text="Battery Level :"
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
         <TextView
@@ -120,8 +120,8 @@
             android:layout_marginRight="33dp"
             android:layout_toRightOf="@+id/tv_battterytitle"
             android:gravity="center"
-            android:textColor="@color/white"
             android:text=" - "
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -132,9 +132,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout_battery"
         android:layout_marginTop="20dp"
+        android:orientation="horizontal"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:orientation="horizontal">
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/tv_deviceidtitle"
@@ -144,8 +144,8 @@
             android:layout_toLeftOf="@+id/txt_data"
             android:layout_toStartOf="@+id/txt_data"
             android:gravity="center"
-            android:textColor="@color/white"
             android:text="Device ID :"
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
         <TextView
@@ -155,8 +155,8 @@
             android:layout_marginRight="33dp"
             android:layout_toRightOf="@+id/tv_deviceidtitle"
             android:gravity="center"
-            android:textColor="@color/white"
             android:text=" - "
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
     </LinearLayout>
@@ -167,9 +167,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout_deviceID"
         android:layout_marginTop="20dp"
+        android:orientation="horizontal"
         android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:orientation="horizontal">
+        android:paddingRight="@dimen/activity_horizontal_margin">
 
         <TextView
             android:id="@+id/tv_datetimelabel"
@@ -177,8 +177,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:gravity="center"
-            android:textColor="@color/white"
             android:text="Date Time :"
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
         <TextView
@@ -188,24 +188,31 @@
             android:layout_marginRight="33dp"
             android:layout_toRightOf="@+id/tv_datetimelabel"
             android:gravity="center"
-            android:textColor="@color/white"
             android:text=" - "
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/tv_Log"
-        android:layout_marginTop="20dp"
-        android:layout_width="200dp"
+    <ScrollView
+        android:id="@+id/scrollView1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/layout_datetime"
-        android:textColor="@color/white"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/sp_choose"
         android:layout_alignEnd="@+id/sp_choose"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/sp_choose"
+        android:layout_marginTop="20dp">
+
+        <TextView
+            android:id="@+id/tv_Log"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white" />
+
+    </ScrollView>
 
 
 </RelativeLayout>
