--- a/app/src/main/res/layout/adapter_event.xml
+++ b/app/src/main/res/layout/adapter_event.xml
@@ -3,8 +3,9 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
         android:id="@+id/imageViewBanner"
         android:layout_margin="5dp" />
+
 </LinearLayout>
