--- a/app/src/main/res/layout/activity_user_profile_page.xml
+++ b/app/src/main/res/layout/activity_user_profile_page.xml
@@ -110,7 +110,9 @@
                     android:inputType="text"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                    android:textStyle="bold"
+                    />
             </TableRow>
 
             <TableRow>
@@ -142,8 +144,7 @@
                     android:layout_height="wrap_content"
                     android:layout_column="2"
                     android:layout_margin="1dp"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
+                    android:focusableInTouchMode="false"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
                     android:textStyle="bold" />
@@ -178,8 +179,7 @@
                     android:layout_height="wrap_content"
                     android:layout_column="2"
                     android:layout_margin="1dp"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
+                    android:focusableInTouchMode="false"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
                     android:textStyle="bold" />
@@ -217,6 +217,7 @@
                     android:focusableInTouchMode="true"
                     android:inputType="phone"
                     android:maxLength="3"
+                    android:digits="0123456789"
                     android:textColor="@android:color/white"
                     android:textSize="15dp"
                     android:textStyle="bold" />
