1. Update Logo 2. Fix DateTime class 3. Update Goal Add function 4. Update Sleep Graph 5. Update all Graph 6. Update DA -- Generate new id 7. [New] Activity Plan Page 8. [New] warm up & cool down -- coming soon

--- a/app/src/main/res/layout/activity_add_goal.xml
+++ b/app/src/main/res/layout/activity_add_goal.xml
@@ -13,6 +13,16 @@
         android:id="@+id/spinnerGoal"
         android:spinnerMode="dropdown" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:id="@+id/txtCurrentStatus"
+        android:text="Current: "
+        android:textSize="20dp"
+        android:textColor="@android:color/holo_blue_dark"
+        android:padding="10dp" />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
