--- a/app/src/main/res/layout/activity_exercise_menu.xml
+++ b/app/src/main/res/layout/activity_exercise_menu.xml
@@ -63,7 +63,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Warm Up"
+        android:text="Warm Up For 5-15 minutes"
         android:layout_below="@+id/chronometerTimer"
         android:layout_centerHorizontal="true"
         android:textSize="20dp"
