--- a/app/src/main/res/layout/adapter_activity_plan_item.xml
+++ b/app/src/main/res/layout/adapter_activity_plan_item.xml
@@ -8,7 +8,7 @@
 
         <TableRow>
             <ImageView
-                android:src="@drawable/common"
+                android:src="@drawable/icon_common"
                 android:layout_column="0"
                 android:id="@+id/smallIcon"
                 android:layout_width="wrap_content"
